--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -4,8 +4,7 @@
     padding: $badge-padding-y $badge-padding-x;
     @include font-size($badge-font-size);
     font-weight: $badge-font-weight;
-    line-height: 1;
-    color: $badge-color;
+    line-height: $badge-line-height;
     text-align: center;
     white-space: nowrap;
     vertical-align: baseline;
@@ -18,7 +17,7 @@
     }
 
     // Default color (linked badges get darker on :hover)
-    @include badge-variant($badge-color, $badge-bg, $badge-link-hover-color, $badge-hover-bg);
+    @include badge-variant($badge-default-color, $badge-default-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
 }
 
 // Quick fix for badges in buttons
@@ -33,7 +32,6 @@ a.badge {
     text-decoration: none;
 
     @include hover-focus {
-        color: $badge-link-hover-color;
         text-decoration: none;
     }
 }
@@ -48,24 +46,29 @@ a.badge {
 
 // Colors (linked badges get darker on :hover)
 @each $theme, $colors in $context-themes {
-    $color:       map-get($colors, "control-color");
     $bg:          map-get($colors, "control-bg");
-    $hover-color: map-get($colors, "control-hover-color");
     $hover-bg:    map-get($colors, "control-hover-bg");
 
+    $color: color-if-contrast($badge-default-color, $bg);
+    $hover-color: color-if-contrast($color, $hover-bg);
+
     .badge-#{$theme} {
-        @include badge-variant($color, $bg, $hover-color, $hover-bg);
+        @include badge-variant($color, $bg, $bg, $hover-color, $hover-bg, $hover-bg);
     }
 }
 
 // Outline (linked badges get color fill on :hover)
 .badge-outline {
-    @include badge-outline-variant($badge-bg);
+    @include badge-variant($badge-default-color, $badge-outline-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
 }
 @each $theme, $colors in $context-themes {
-    $color: map-get($colors, "control-bg");
+    $bg:          $badge-outline-bg;
+    $hover-bg:    map-get($colors, "control-bg");
+
+    $color:       map-get($colors, "control-bg");
+    $hover-color: color-if-contrast($white, $hover-bg);
 
     .badge-outline-#{$theme} {
-        @include badge-outline-variant($color);
+        @include badge-variant($color, $bg, $hover-bg, $hover-color, $hover-bg, $hover-bg);
     }
 }
