--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -1,23 +1,18 @@
 // stylelint-disable declaration-no-important
 
-// Special backgrounds
-@include bg-variant(".bg-inverse", map-get($inverse-color, "color"), map-get($inverse-color, "bg"), map-get($inverse-color, "hover-bg"));
-@include bg-variant(".bg-faded", inherit, $faded-bg, $faded-hover-bg);
-
 // Contextual backgrounds
 @each $theme, $colors in $context-themes {
-    $color:    map-get($colors, "control-color");
     $bg:       map-get($colors, "control-bg");
     $hover-bg: map-get($colors, "control-hover-bg");
 
-    @include bg-variant(".bg-#{$theme}", $color, $bg, $hover-bg);
+    @include bg-variant(".bg-#{$theme}", $bg, $hover-bg);
 }
 
 // Palette colors
 @if $enable-palette {
     @each $theme, $color in $palette-themes {
         @each $level in $palette-levels {
-            @include bg-palette-variant(".bg-#{$theme}-#{$level}", $color, $level, $level-bg-hover-delta);
+            @include bg-palette-variant(".bg-#{$theme}-#{$level}", $color, $level, $level-delta-hover-bg);
         }
     }
 }
