--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -32,8 +32,11 @@
 @each $theme, $colors in $context-themes {
     $color:       map-get($colors, "context-color");
     $bg:          map-get($colors, "context-bg");
-    $border:      map-get($colors, "context-border");
+    $border:      map-get($colors, "context-border-color");
     $hover-color: map-get($colors, "context-hover-color");
+
+    $color:       color-if-contrast($color, $bg);
+    $hover-color: color-if-contrast($hover-color, $bg);
 
     .alert-#{$theme} {
         @include alert-variant($color, $bg, $border, $hover-color);
