--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -62,16 +62,16 @@ $light:     palette($uibase, 50) !default;
 $dark:      palette($uibase, 700) !default;
 
 // Base UI Scale
-$uibase-50:  palette($uibase, 50);
-$uibase-100:  palette($uibase, 100);
-$uibase-200:  palette($uibase, 200);
-$uibase-300:  palette($uibase, 300);
-$uibase-400:  palette($uibase, 400);
-$uibase-500:  palette($uibase, 500);
-$uibase-600:  palette($uibase, 600);
-$uibase-700:  palette($uibase, 700);
-$uibase-800:  palette($uibase, 800);
-$uibase-900:  palette($uibase, 900);
+$uibase-50:  palette($uibase, 50) !default;
+$uibase-100:  palette($uibase, 100) !default;
+$uibase-200:  palette($uibase, 200) !default;
+$uibase-300:  palette($uibase, 300) !default;
+$uibase-400:  palette($uibase, 400) !default;
+$uibase-500:  palette($uibase, 500) !default;
+$uibase-600:  palette($uibase, 600) !default;
+$uibase-700:  palette($uibase, 700) !default;
+$uibase-800:  palette($uibase, 800) !default;
+$uibase-900:  palette($uibase, 900) !default;
 
 // Palette color
 $palette-themes: (
@@ -98,11 +98,12 @@ $context-colors: (
     "dark":      $dark
 ) !default;
 
+// stylelint-disable
 // Process brand colors
 $brand-themes: _mix-context-colors($context-colors);
 // Merge into master themes map
 $context-themes: map-merge($context-themes, $brand-themes);
-
+// stylelint-enable
 
 // Color Contrast Settings
 // =====
@@ -128,7 +129,7 @@ $inverse-color: (
 // Control the default spacing of most elements by modifying these variables.
 $spacer:   1rem !default;
 $spacers: () !default;
-// stylelint-disable function-comma-newline-after, function-parentheses-newline-inside
+// stylelint-disable
 $spacers: map-merge((
     "0":    0,
     "0_25": ($spacer * .25),
@@ -137,7 +138,7 @@ $spacers: map-merge((
     "1_5":  ($spacer * 1.5),
     "2":    ($spacer * 2)
 ), $spacers);
-// stylelint-enable function-comma-newline-after, function-parentheses-newline-inside
+// stylelint-enable
 
 
 // Grid breakpoints
@@ -442,7 +443,7 @@ $btn-padding-x:             .75rem !default;
 $btn-font-weight:           $font-weight-normal !default;
 $btn-line-height:           1.25 !default;
 $btn-border-radius:         $border-radius !default;
-$btn-box-shadow:            inset 0 .125rem .25rem rgba(255, 255, 255, .25);
+$btn-box-shadow:            inset 0 .125rem .25rem rgba(255, 255, 255, .25) !default;
 $btn-focus-box-shadow:      0 0 2px 3px rgba(palette-context("info", 300), .75) !default; // px because simulating outline
 $btn-active-box-shadow:     inset 0 .125rem .25rem rgba(0, 0, 0, .25) !default;
 
@@ -571,6 +572,7 @@ $custom-file-button-color:          $uibase-600 !default;
 $custom-file-button-bg:             $uibase-50 !default;
 
 $custom-file-text: () !default;
+// stylelint-disable
 $custom-file-text-default: (
     placeholder: (
         en: "Choose file..."
@@ -580,6 +582,7 @@ $custom-file-text-default: (
     )
 ) !default;
 $custom-file-text: map-merge($custom-file-text-default, $custom-file-text);
+// stylelint-enable
 
 // Switch
 // =====
@@ -897,7 +900,7 @@ $tooltip-arrow-color:   $tooltip-bg !default;
 
 // Popovers
 // =====
-$popover-font-size:             $font-size-base;
+$popover-font-size:             $font-size-base !default;
 $popover-bg:                    $white !default;
 $popover-max-width:             rem(288px) !default;  // 288px=>18rem
 $popover-border-width:          $border-width !default;
