fix lint error in docs scss

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -5,6 +5,7 @@
 @import "../../../scss/settings";
 @import "../../../scss/mixins";
 
+// stylelint-disable-next-line scss/dollar-variable-default
 $docs-color: #246;
 
 // Skipnav
