--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -117,6 +117,7 @@
 }
 
 // Custom file language example
+// stylelint-disable-next-line scss/dollar-variable-default
 $custom-file-text: (
     placeholder: (
         en: "Choose file...",
