Cleanup some missed gridline items

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -385,7 +385,7 @@ $custom-file-text: (
     }
     > div div {
         background-color: rgba(34, 68, 102, .05);
-        border: $gridline-border-width solid rgba(34, 68, 102, .2);
+        border: $border-width solid rgba(34, 68, 102, .2);
     }
 }
 
